--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -657,7 +657,7 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Mezua",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Tranpa-Adierazlea",
-  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "",
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "Ezkutatu Legezkoa Bada",
   "STATUS/FPS/ENABLED": "FPS Kontadorea",
   "STATUS/CPS/ENABLED": "CPS Kontadorea",
   "STATUS/CPS/DROPDOWN/MAX": "Gehiengoa Erakutsi",
