--- a/langs/ja-JP.json
+++ b/langs/ja-JP.json
@@ -11,7 +11,7 @@
   "NX/COMBO/EMPTY": "",
   "NX/PICKER/EMPTY": "",
   "NX/PICKER/INPUT": "",
-  "ERROR": "",
+  "ERROR": "エラー",
   "ERROR/DISMISS": "",
   "ERROR/HACKPRO/CONFLICTING_RULESET": "",
   "ERROR/REPLAY/EMPTY_FILENAME": "",
@@ -19,11 +19,11 @@
   "ERROR/REPLAY/NO_INPUTS": "",
   "ERROR/STATUS/MAX_FIELDS": "",
   "ERROR/LEVEL/NO_CBF": "",
-  "MESSAGE": "",
-  "MESSAGE/OK": "",
-  "MESSAGE/CANCEL": "",
-  "MESSAGE/YES": "",
-  "MESSAGE/NO": "",
+  "MESSAGE": "メッセージ",
+  "MESSAGE/OK": "OK",
+  "MESSAGE/CANCEL": "キャンセル",
+  "MESSAGE/YES": "はい",
+  "MESSAGE/NO": "いいえ",
   "MESSAGE/HOME/CONFIRM_LOGOUT": "",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "",
@@ -40,28 +40,28 @@
   "GM_VAR/0096": "",
   "HOME/LANGUAGE": "言語",
   "HOME/SEARCH/SEARCH": "検索",
-  "HOME/SEARCH/AUTO_SELECT": "",
+  "HOME/SEARCH/AUTO_SELECT": "自動選択",
   "HOME/RULESETS": "",
   "HOME/RULESETS/SAFE_MODE": "セーフモード",
-  "HOME/ANIM_SPEED": "",
+  "HOME/ANIM_SPEED": "アニメーションスピード",
   "HOME/ANIM_SPEED/PRE": "",
   "HOME/ANIM_SPEED/SUF": "",
   "HOME/CONTRIBUTE_TRANSLATIONS": "",
-  "HOME/DOT": "",
+  "HOME/DOT": "ドット",
   "HOME/DOT/TIP": "",
   "HOME/SHORTCUT/ALT": "",
   "HOME/SHORTCUT/ICONIC": "",
   "HOME/SORT_TABS": "",
-  "HOME/SCALE": "",
+  "HOME/SCALE": "スケール",
   "HOME/SCALE/PRE": "",
   "HOME/SCALE/SUF": "",
-  "HOME/THEME": "",
+  "HOME/THEME": "テーマ",
   "HOME/MISC": "",
-  "HOME/MISC/LICENSES": "",
+  "HOME/MISC/LICENSES": "ライセンス",
   "HOME/MISC/LOAD_LANG": "",
   "HOME/MISC/LOAD_LEGACY_SAVE": "",
-  "HOME/MISC/LOGOUT": "",
-  "KEYBINDS": "",
+  "HOME/MISC/LOGOUT": "ログアウト",
+  "KEYBINDS": "キーバインド",
   "KEYBINDS/SHORTCUT": "",
   "KEYBINDS/SET": "",
   "KEYBINDS/VIEW": "",
@@ -96,7 +96,7 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "",
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "",
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
-  "COSMETIC/HACK_BALL_ROTATION_BUG": "",
+  "COSMETIC/HACK_BALL_ROTATION_BUG": "Ball回転バグ",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "",
   "COSMETIC/HACK_NO_CIRCLES": "",
   "COSMETIC/HACK_NO_CIRCLES/TIP": "",
@@ -106,9 +106,9 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
-  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER": "コインのシャワー",
   "COSMETIC/HACK_COIN_SHOWER/TIP": "",
-  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "エンドシェイク無し",
   "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
@@ -130,11 +130,11 @@
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "フリップ禁止およびレベル完了テキストを停止します",
   "COSMETIC/HACK_NO_GHOST_TRAIL": "",
   "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
-  "COSMETIC/HACK_NO_GLOW": "",
+  "COSMETIC/HACK_NO_GLOW": "発光効果無し",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
   "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
-  "COSMETIC/HACK_NO_MIRROR": "",
+  "COSMETIC/HACK_NO_MIRROR": "ミラー無し",
   "COSMETIC/HACK_NO_MIRROR/TIP": "",
   "COSMETIC/HACK_NO_ORB_RING": "",
   "COSMETIC/HACK_NO_ORB_RING/TIP": "",
@@ -249,7 +249,7 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
   "LEVEL": "レベル",
-  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "自動クリック",
   "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
   "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
   "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
@@ -281,7 +281,7 @@
   "LEVEL/AUTO_MUSIC_SYNC/DROPDOWN/THRESHOLD": "閾値 (ms)",
   "LEVEL/AUTO_MUSIC_SYNC/DROPDOWN/THRESHOLD/PRE": "閾値",
   "LEVEL/AUTO_MUSIC_SYNC/DROPDOWN/THRESHOLD/SUF": "ms",
-  "LEVEL/AUTO_KILL/HACK_AUTO_KILL": "",
+  "LEVEL/AUTO_KILL/HACK_AUTO_KILL": "自動キル",
   "LEVEL/AUTO_KILL/HACK_AUTO_KILL/TIP": "",
   "LEVEL/AUTO_KILL/DROPDOWN/CLASSIC": "",
   "LEVEL/AUTO_KILL/DROPDOWN/CLASSIC/PRE": "",
@@ -326,8 +326,8 @@
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "50チェックポイントの制限を解除します",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "練習でコイン収集",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "練習モードでコインとユーザーコインを収集可能にします (作成者: WEGFan)",
-  "LEVEL/HACK_CONFIRM_EXIT": "",
-  "LEVEL/HACK_CONFIRM_EXIT/TIP": "",
+  "LEVEL/HACK_CONFIRM_EXIT": "退出確認",
+  "LEVEL/HACK_CONFIRM_EXIT/TIP": "ゲームを退出する前に確認を求めます",
   "LEVEL/HACK_CONFIRM_FULL_RESET": "完全リセットの確認",
   "LEVEL/HACK_CONFIRM_FULL_RESET/TIP": "レベルを完全リセットする前に確認を求めます",
   "LEVEL/HACK_CONFIRM_NORMAL": "通常モード確認",
@@ -340,7 +340,7 @@
   "LEVEL/HACK_FORCE_PLATFORMER/TIP": "すべてのレベルでプラットフォーマーモードを有効にします",
   "LEVEL/HACK_INSTANT_COMPLETE": "瞬時クリア",
   "LEVEL/HACK_INSTANT_COMPLETE/TIP": "プレイヤーをレベルの最後に瞬時に移動させます",
-  "LEVEL/HACK_JUMP_HACK": "",
+  "LEVEL/HACK_JUMP_HACK": "ジャンプハック",
   "LEVEL/HACK_JUMP_HACK/TIP": "",
   "LEVEL/HACK_PAUSE_DURING_COMPLETE": "",
   "LEVEL/HACK_PAUSE_DURING_COMPLETE/TIP": "",
@@ -362,7 +362,7 @@
   "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "トリガー表示",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "レベル内のトリガーを表示します",
-  "LEVEL/HACK_SHIPCOPTER": "",
+  "LEVEL/HACK_SHIPCOPTER": "Shipコプター",
   "LEVEL/HACK_SHIPCOPTER/TIP": "",
   "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER": "",
   "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER/TIP": "",
@@ -401,9 +401,9 @@
   "LEVEL/NOCLIP_LIMITS/DROPDOWN/DEATH_LIMIT_ON": "デス制限オン",
   "LEVEL/NOCLIP_LIMITS/HACK_NOCLIP_LIMITS": "ノークリップ制限",
   "LEVEL/NOCLIP_LIMITS/HACK_NOCLIP_LIMITS/TIP": "特定の精度しきい値を超えるとプレイヤーを倒します（ノークリップが必要）",
-  "LEVEL/NO_COLLISION/HACK_NO_COLLISION": "",
-  "LEVEL/NO_COLLISION/DROPDOWN/HAZARDS": "",
-  "LEVEL/NO_COLLISION/DROPDOWN/SLOPES": "",
+  "LEVEL/NO_COLLISION/HACK_NO_COLLISION": "当たり判定無し",
+  "LEVEL/NO_COLLISION/DROPDOWN/HAZARDS": "危険物",
+  "LEVEL/NO_COLLISION/DROPDOWN/SLOPES": "スロープ",
   "LEVEL/NO_COLLISION/DROPDOWN/SOLIDS": "",
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "シード",
@@ -547,10 +547,10 @@
   "INTERFACE": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
   "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
-  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "メニュー画面の雪を非表示",
   "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
   "SPEEDHACK": "",
-  "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "",
+  "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "速度ハック",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "",
   "SPEEDHACK/LAYOUT/SPINNER": "",
   "SPEEDHACK/LAYOUT/SPINNER/PRE": "",
@@ -559,7 +559,7 @@
   "SPEEDHACK/HACK_SPEEDHACK_AUDIO/TIP": "",
   "SPEEDHACK/HACK_SPEEDHACK_CLASSIC": "",
   "SPEEDHACK/HACK_SPEEDHACK_CLASSIC/HACK_SPEEDHACK/TIP": "",
-  "DISPLAY": "",
+  "DISPLAY": "ディスプレイ",
   "DISPLAY/HACK_FRAME_EXTRAPOLATION": "",
   "DISPLAY/HACK_FRAME_EXTRAPOLATION/TIP": "",
   "DISPLAY/FPS/SPINNER": "",
@@ -582,7 +582,7 @@
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "",
   "DISPLAY/FULLSCREEN/COMBO/1": "",
-  "UTILITY": "",
+  "UTILITY": "ユーティリティ",
   "UTILITY/CLICKS/P1": "",
   "UTILITY/CLICKS/P2": "",
   "UTILITY/DEV_TOOLS": "",
@@ -610,7 +610,7 @@
   "SCREENSHOT/COMBO/0": "",
   "SCREENSHOT/COMBO/1": "",
   "SCREENSHOT/COMBO/2": "",
-  "STATUS": "",
+  "STATUS": "ステータス",
   "STATUS/HIDE": "",
   "STATUS/FONT": "",
   "STATUS/COSMETIC/OPACITY": "",
@@ -672,26 +672,26 @@
   "STATUS/JUMPS/ENABLED": "",
   "STATUS/LEVEL_TIME/ENABLED": "",
   "STATUS/PERCENTAGE/ENABLED": "",
-  "STATUS/CLOCK/ENABLED": "",
-  "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "",
+  "STATUS/CLOCK/ENABLED": "時刻表示",
+  "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12時間表示",
   "STATUS/FRAME/ENABLED": "",
   "STATUS/POSITION/ENABLED": "",
   "STATUS/REPLAY_STATE/ENABLED": "",
   "STATUS/SESSION_TIME/ENABLED": "",
-  "REPLAY": "",
-  "REPLAY/FILE": "",
-  "REPLAY/OPEN": "",
-  "REPLAY/SAVE": "",
-  "REPLAY/DELETE": "",
-  "REPLAY/STATE/RECORD": "",
-  "REPLAY/STATE/PLAY": "",
-  "REPLAY/SAVE_LAYOUT/AUTO_SAVE": "",
-  "REPLAY/SAVE_LAYOUT/SAVE": "",
+  "REPLAY": "リプレイ",
+  "REPLAY/FILE": "ファイル",
+  "REPLAY/OPEN": "開く",
+  "REPLAY/SAVE": "保存",
+  "REPLAY/DELETE": "削除",
+  "REPLAY/STATE/RECORD": "録画",
+  "REPLAY/STATE/PLAY": "再生",
+  "REPLAY/SAVE_LAYOUT/AUTO_SAVE": "自動保存",
+  "REPLAY/SAVE_LAYOUT/SAVE": "保存",
   "REPLAY/END_LAYOUT/CLEAR": "",
-  "REPLAY/END_LAYOUT/DELETE": "",
-  "REPLAY/GAMEPLAY": "",
+  "REPLAY/END_LAYOUT/DELETE": "削除",
+  "REPLAY/GAMEPLAY": "ゲームプレイ",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "",
   "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
-  "REPLAY/CONVERT": "",
+  "REPLAY/CONVERT": "変換",
   "REPLAY/NONE": ""
 }
