--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -27,7 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Mega Hack saioa itxi nahi al duzu?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Jadanik zenituen Mega Hack v8-ko ezarpenak kargatzea nahi al dituzu? Honek orain dituzun ezarpenak berridatziko ditu",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Saioa itxita! Mega Hack erabiltzea jarraitu ahal duzu berrabiarazi arte",
-  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "Adierazitako tranpa guztiak itzali nahi al duzu?",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "Adierazitako tranpa guztiak itzali nahi al dituzu?",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Mesedez, joku-geruzatik/editoretik irten behar duzu pantaila osoko modua aldatzeko",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Zure makroan gorde gabeko aldaketak dituzu. Garbitzea eta berriro hastea ziur nahi al duzu?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Hautatutako makroa ezabatzeko ziur al zaude?",
