--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -107,7 +107,7 @@
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Estela clásica del wave",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "Reimplantación de la estela del wave de la 2.1",
   "COSMETIC/HACK_COIN_SHOWER": "Ducha de monedas",
-  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
   "COSMETIC/HACK_NO_END_SHAKE": "Desactivar temblor del final",
   "COSMETIC/HACK_NO_END_SHAKE/TIP": "Desactiva el temblor de cámara durante la animación de completar nivel",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "Animaciones congeladas",
