--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -415,8 +415,8 @@
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Lapso de reaparición",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME/TIP": "Cambia el tiempo de reaparición del jugador",
   "LEVEL/RESPAWN_TIME/DROPDOWN/IGNORE_SPEEDHACK": "Ignorar speedhack",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX": "Hitbox alineada al eje",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/AXIS_ALIGNED_BOX/TIP": "Muestra la hitbox alineada al eje de los objetos rotados junto a su hitbox rotada",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/FILL": "Rellenar hitboxes",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/HAZARDS/CHECKBOX": "Obstáculos",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY": "Opacidad",
@@ -424,7 +424,7 @@
   "LEVEL/SHOW_HITBOXES/DROPDOWN/OPACITY/SUF": "%",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PASSABLE/CHECKBOX": "Atravesable",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER": "Jugador",
-  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "",
+  "LEVEL/SHOW_HITBOXES/DROPDOWN/PLAYER_COLLISION": "Bloque de colisión del jugador",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SECTION": "Mostrar solo los activados",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SOLIDS/CHECKBOX": "Sólidos",
   "LEVEL/SHOW_HITBOXES/DROPDOWN/SPECIALS/CHECKBOX": "Especiales",
