--- a/langs/LIVE.json
+++ b/langs/LIVE.json
@@ -11,6 +11,7 @@
   "*/RULESET*/1": "Demon List",
   "*/RULESET*/2": "Leaderboards",
   "HOME": "Mega Hack",
+  "ICONIC": "Iconic",
   "HOME/THEME/0/TOGGLE": "Nona",
   "HOME/THEME/1/TOGGLE": "Nona Lux",
   "HOME/THEME/2/TOGGLE": "Octavus",
