--- a/langs/ar-SA.json
+++ b/langs/ar-SA.json
@@ -34,12 +34,37 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "تم تحويل الماكرو بنجاح! ستجده مع ماكرواتك الأخرى",
   "MESSAGE/REPLAY/SAVE": "هل تريد حفظ التغييرات على الماكرو الخاص بك؟",
   "MESSAGE/KEYBINDS/EMPTY": "الرجاء إدخال ربط مفتاح أولاً",
+  "ICONIC/DISABLE": "",
+  "ICONIC/EFFECTS": "",
+  "ICONIC/GENERAL": "",
+  "ICONIC/GLOW": "",
+  "ICONIC/OVERRIDE": "",
+  "ICONIC/VANILLA_PROGRESS_BAR": "",
+  "ICONIC/WAVE": "",
+  "ICONIC/PREVIEW/BASE_PARTICLES": "",
+  "ICONIC/PREVIEW/COL1": "",
+  "ICONIC/PREVIEW/COL2": "",
+  "ICONIC/PREVIEW/DASH_EFFECT": "",
+  "ICONIC/PREVIEW/DEATH_EFFECT": "",
+  "ICONIC/PREVIEW/EXTRA": "",
+  "ICONIC/PREVIEW/GHOST_TRAIL": "",
+  "ICONIC/PREVIEW/GLOW": "",
+  "ICONIC/PREVIEW/ICONS": "",
+  "ICONIC/PREVIEW/SHIP_FIRE": "",
+  "ICONIC/PREVIEW/TRAIL": "",
+  "ICONIC/PREVIEW/TRAIL_COL": "",
+  "ICONIC/PREVIEW/WAVE_TRAIL": "",
+  "ICONIC/SPECIAL/SPEED/PRE": "",
+  "ICONIC/SPECIAL/SPEED/SUF": "",
+  "ICONIC/SPECIAL/PREVIEW": "",
+  "ICONIC/SPECIAL/INVERTED": "",
   "GM_VAR/0060": "أيقونة الميني الافتراضية",
   "GM_VAR/0061": "تبديل سبايدر داش",
   "GM_VAR/0062": "تبديل داش فاير",
   "GM_VAR/0096": "تبديل أثر الموجة",
   "HOME/LANGUAGE": "اللغة",
-  "HOME/SEARCH": "بحث",
+  "HOME/SEARCH/SEARCH": "",
+  "HOME/SEARCH/AUTO_SELECT": "",
   "HOME/RULESETS": "مجموعات القواعد",
   "HOME/RULESETS/SAFE_MODE": "الوضع الآمن",
   "HOME/ANIM_SPEED": "الرسوم المتحركة (مللي ثانية)",
@@ -105,6 +130,10 @@
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "يسمح بالنبض فوق 60 هرتز، مشابه للنبض قبل الإصدار 2.1",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "أثر الموجة الكلاسيكي",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "إعادة تنفيذ أثر الموجة من الإصدار 2.1",
+  "COSMETIC/HACK_COIN_SHOWER": "",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
+  "COSMETIC/HACK_NO_END_SHAKE": "",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
   "COSMETIC/HACK_FROZEN_ANIMATIONS": "الرسوم المتحركة المتجمدة",
   "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "يعطل رسوم المتحركة للرسومات مثل الروبوت والعنكبوت",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "إخفاء زر الإيقاف المؤقت",
@@ -168,12 +197,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "يعطل النبض على الكائنات",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "بدون ومضة إعادة الظهور",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "يعطل ومضة إعادة الظهور وتأثير الدائرة",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
   "COSMETIC/HACK_NO_SHADERS": "بدون ظلال",
   "COSMETIC/HACK_NO_SHADERS/TIP": "يعطل الظلال داخل المستوى",
   "COSMETIC/HACK_NO_SHAKE": "بدون اهتزاز",
   "COSMETIC/HACK_NO_SHAKE/TIP": "يعطل محفزات الاهتزاز",
   "COSMETIC/HACK_NO_SPIDER_DASH": "بدون سبايدر داش",
   "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "يعطل تأثير سبايدر داش عند الانتقال",
+  "COSMETIC/HACK_NO_SWING_FIRE": "",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
   "COSMETIC/HACK_NO_TRAIL": "بدون أثر",
   "COSMETIC/HACK_NO_TRAIL/TIP": "يضع الأثر على حالة إيقاف دائمًا",
   "COSMETIC/HACK_NO_WAVE_PULSE": "بدون نبض الموجة",
@@ -184,6 +217,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "يعطل أثر اللاعب الافتراضي خلف أثر الموجة",
   "COSMETIC/HACK_PLAYER_ON_TOP": "اللاعب في الأعلى",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "يجبر اللاعب (وأثر الموجة) على الظهور فوق جميع الكائنات",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "عرض إجمالي المحاولات",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "يعرض عدد المحاولات الإجمالي داخل المستوى بدلاً من عدد محاولات الجلسة",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "أثر الموجة الصلب",
@@ -238,6 +273,21 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "مسح الأقدم",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "الشفافية",
   "LEVEL": "المستوى",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "إسكات عند",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "إسكات عند",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
@@ -248,7 +298,7 @@
   "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_AT": "إلغاء الإسكات عند",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_AT/PRE": "إلغاء الإسكات عند",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_AT/SUF": "%",
-  "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_ON_PAause": "إلغاء الإسكات عند الإيقاف المؤقت",
+  "LEVEL/AUTO_DEAFEN/DROPDOWN/UNDEAFEN_ON_PAUSE": "",
   "LEVEL/AUTO_DEAFEN/HACK_AUTO_DEAFEN": "الإسكات التلقائي",
   "LEVEL/AUTO_DEAFEN/HACK_AUTO_DEAFEN/TIP": "يُصمّت المستخدم في Discord بعد نسبة مئوية معينة",
   "LEVEL/AUTO_MUSIC_SYNC/DROPDOWN/NO_LEGACY_SYNC": "بدون مزامنة قديمة",
@@ -328,10 +378,12 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "يرسم حدود اصطدام المستوى، فقط عند الموت",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "الإظهار مع Noclip",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "إظهار كائن الموت",
-  "LEVEL/HACK_SHOW_LAYOUT": "إظهار التخطيط",
-  "LEVEL/HACK_SHOW_LAYOUT/TIP": "يزيل جميع الديكورات والألوان من المستويات",
-  "LEVEL/HACK_SHOW_TRAJECTORY": "إظهار المسار",
-  "LEVEL/HACK_SHOW_TRAJECTORY/TIP": "يرسم المسارات المتوقعة للاعب لضغطات الأزرار المستمرة/الإفلاتات",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "",
+  "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
   "LEVEL/HACK_SHOW_TRIGGERS": "إظهار المحفزات",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "يعرض المحفزات في المستوى",
   "LEVEL/HACK_SHIPCOPTER": "سفينة مروحية",
@@ -410,6 +462,13 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "طول محرر غير محدود",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "إظهار أثر حدود الاصطدام",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "يعرض أثرًا لمكان ذهاب حدود اصطدام لاعبك أثناء محاولة، يتطلب إظهار حدود الاصطدام",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "",
+  "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "حساب قديم",
   "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "بوابات نمط اللعب",
   "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "بوابات السرعة",
@@ -550,6 +609,8 @@
   "UTILITY": "الأدوات",
   "UTILITY/CLICKS/P1": "نقر P1",
   "UTILITY/CLICKS/P2": "نقر P2",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "يسار",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "يمين",
   "UTILITY/DIRECTIONAL/P2_LEFT": "يسار",
@@ -654,6 +715,7 @@
   "REPLAY/END_LAYOUT/DELETE": "حذف",
   "REPLAY/GAMEPLAY": "خيارات اللعب",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "السماح بالعشوائية",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
   "REPLAY/CONVERT": "تحويل (.json, .gdr)",
   "REPLAY/NONE": "لا توجد إعادة تشغيل محددة"
 }
