--- a/langs/ca-ES.json
+++ b/langs/ca-ES.json
@@ -34,6 +34,30 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Macro convertit correctament! Troba'l amb els teus altres macros",
   "MESSAGE/REPLAY/SAVE": "Vols desar els canvis al teu macro?",
   "MESSAGE/KEYBINDS/EMPTY": "Si us plau, introdueix primer una tecla d'accés",
+  "ICONIC/DISABLE": "",
+  "ICONIC/EFFECTS": "",
+  "ICONIC/GENERAL": "",
+  "ICONIC/GLOW": "",
+  "ICONIC/OVERRIDE": "",
+  "ICONIC/VANILLA_PROGRESS_BAR": "",
+  "ICONIC/WAVE": "",
+  "ICONIC/PREVIEW/BASE_PARTICLES": "",
+  "ICONIC/PREVIEW/COL1": "",
+  "ICONIC/PREVIEW/COL2": "",
+  "ICONIC/PREVIEW/DASH_EFFECT": "",
+  "ICONIC/PREVIEW/DEATH_EFFECT": "",
+  "ICONIC/PREVIEW/EXTRA": "",
+  "ICONIC/PREVIEW/GHOST_TRAIL": "",
+  "ICONIC/PREVIEW/GLOW": "",
+  "ICONIC/PREVIEW/ICONS": "",
+  "ICONIC/PREVIEW/SHIP_FIRE": "",
+  "ICONIC/PREVIEW/TRAIL": "",
+  "ICONIC/PREVIEW/TRAIL_COL": "",
+  "ICONIC/PREVIEW/WAVE_TRAIL": "",
+  "ICONIC/SPECIAL/SPEED/PRE": "",
+  "ICONIC/SPECIAL/SPEED/SUF": "",
+  "ICONIC/SPECIAL/PREVIEW": "",
+  "ICONIC/SPECIAL/INVERTED": "",
   "GM_VAR/0060": "Icona Mini Per Defecte",
   "GM_VAR/0061": "Commuta Spider Dash",
   "GM_VAR/0062": "Commuta Foc Dash",
