--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -34,6 +34,30 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Successfully converted macro! Find it with your other macros",
   "MESSAGE/REPLAY/SAVE": "Do you want to save the changes to your macro?",
   "MESSAGE/KEYBINDS/EMPTY": "Please input a keybind first",
+  "ICONIC/DISABLE": "Disable",
+  "ICONIC/EFFECTS": "Effects",
+  "ICONIC/GENERAL": "General",
+  "ICONIC/GLOW": "Glow",
+  "ICONIC/OVERRIDE": "Override",
+  "ICONIC/VANILLA_PROGRESS_BAR": "Vanilla Progress Bar",
+  "ICONIC/WAVE": "Wave",
+  "ICONIC/PREVIEW/BASE_PARTICLES": "Base",
+  "ICONIC/PREVIEW/COL1": "Col 1",
+  "ICONIC/PREVIEW/COL2": "Col 2",
+  "ICONIC/PREVIEW/DASH_EFFECT": "Dash Effect",
+  "ICONIC/PREVIEW/DEATH_EFFECT": "Death Effect",
+  "ICONIC/PREVIEW/EXTRA": "Extra",
+  "ICONIC/PREVIEW/GHOST_TRAIL": "Ghost Trail",
+  "ICONIC/PREVIEW/GLOW": "Glow",
+  "ICONIC/PREVIEW/ICONS": "Icons",
+  "ICONIC/PREVIEW/SHIP_FIRE": "Ship Fire",
+  "ICONIC/PREVIEW/TRAIL": "Trail",
+  "ICONIC/PREVIEW/TRAIL_COL": "Trail Col",
+  "ICONIC/PREVIEW/WAVE_TRAIL": "Wave Trail",
+  "ICONIC/SPECIAL/SPEED/PRE": "Speed",
+  "ICONIC/SPECIAL/SPEED/SUF": "x",
+  "ICONIC/SPECIAL/PREVIEW": "Preview",
+  "ICONIC/SPECIAL/INVERTED": "Inverted",
   "GM_VAR/0060": "Default Mini Icon",
   "GM_VAR/0061": "Switch Spider Dash",
   "GM_VAR/0062": "Switch Dash Fire",
