--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -34,6 +34,30 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Macro convertita con successo!",
   "MESSAGE/REPLAY/SAVE": "",
   "MESSAGE/KEYBINDS/EMPTY": "Prima inserire un tasto",
+  "ICONIC/DISABLE": "",
+  "ICONIC/EFFECTS": "",
+  "ICONIC/GENERAL": "",
+  "ICONIC/GLOW": "",
+  "ICONIC/OVERRIDE": "",
+  "ICONIC/VANILLA_PROGRESS_BAR": "",
+  "ICONIC/WAVE": "",
+  "ICONIC/PREVIEW/BASE_PARTICLES": "",
+  "ICONIC/PREVIEW/COL1": "",
+  "ICONIC/PREVIEW/COL2": "",
+  "ICONIC/PREVIEW/DASH_EFFECT": "",
+  "ICONIC/PREVIEW/DEATH_EFFECT": "",
+  "ICONIC/PREVIEW/EXTRA": "",
+  "ICONIC/PREVIEW/GHOST_TRAIL": "",
+  "ICONIC/PREVIEW/GLOW": "",
+  "ICONIC/PREVIEW/ICONS": "",
+  "ICONIC/PREVIEW/SHIP_FIRE": "",
+  "ICONIC/PREVIEW/TRAIL": "",
+  "ICONIC/PREVIEW/TRAIL_COL": "",
+  "ICONIC/PREVIEW/WAVE_TRAIL": "",
+  "ICONIC/SPECIAL/SPEED/PRE": "",
+  "ICONIC/SPECIAL/SPEED/SUF": "",
+  "ICONIC/SPECIAL/PREVIEW": "",
+  "ICONIC/SPECIAL/INVERTED": "",
   "GM_VAR/0060": "",
   "GM_VAR/0061": "",
   "GM_VAR/0062": "",
