--- a/langs/de-DE.json
+++ b/langs/de-DE.json
@@ -34,6 +34,30 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Makro erfolgreich konvertiert! Finden Sie es zusammen mit Ihren anderen Makros.",
   "MESSAGE/REPLAY/SAVE": "Möchten Sie die Änderungen an Ihrem Makro speichern?",
   "MESSAGE/KEYBINDS/EMPTY": "Bitte geben Sie zuerst eine Tastenkombination ein.",
+  "ICONIC/DISABLE": "",
+  "ICONIC/EFFECTS": "",
+  "ICONIC/GENERAL": "",
+  "ICONIC/GLOW": "",
+  "ICONIC/OVERRIDE": "",
+  "ICONIC/VANILLA_PROGRESS_BAR": "",
+  "ICONIC/WAVE": "",
+  "ICONIC/PREVIEW/BASE_PARTICLES": "",
+  "ICONIC/PREVIEW/COL1": "",
+  "ICONIC/PREVIEW/COL2": "",
+  "ICONIC/PREVIEW/DASH_EFFECT": "",
+  "ICONIC/PREVIEW/DEATH_EFFECT": "",
+  "ICONIC/PREVIEW/EXTRA": "",
+  "ICONIC/PREVIEW/GHOST_TRAIL": "",
+  "ICONIC/PREVIEW/GLOW": "",
+  "ICONIC/PREVIEW/ICONS": "",
+  "ICONIC/PREVIEW/SHIP_FIRE": "",
+  "ICONIC/PREVIEW/TRAIL": "",
+  "ICONIC/PREVIEW/TRAIL_COL": "",
+  "ICONIC/PREVIEW/WAVE_TRAIL": "",
+  "ICONIC/SPECIAL/SPEED/PRE": "",
+  "ICONIC/SPECIAL/SPEED/SUF": "",
+  "ICONIC/SPECIAL/PREVIEW": "",
+  "ICONIC/SPECIAL/INVERTED": "",
   "GM_VAR/0060": "",
   "GM_VAR/0061": "",
   "GM_VAR/0062": "",
