--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -34,6 +34,30 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "매크로가 성공적으로 변환되었습니다. 다른 매크로와 함께 찾아보세요.",
   "MESSAGE/REPLAY/SAVE": "매크로의 변경 사항을 저장하시겠습니까?",
   "MESSAGE/KEYBINDS/EMPTY": "먼저 키를 설정해 주세요.",
+  "ICONIC/DISABLE": "",
+  "ICONIC/EFFECTS": "",
+  "ICONIC/GENERAL": "",
+  "ICONIC/GLOW": "",
+  "ICONIC/OVERRIDE": "",
+  "ICONIC/VANILLA_PROGRESS_BAR": "",
+  "ICONIC/WAVE": "",
+  "ICONIC/PREVIEW/BASE_PARTICLES": "",
+  "ICONIC/PREVIEW/COL1": "",
+  "ICONIC/PREVIEW/COL2": "",
+  "ICONIC/PREVIEW/DASH_EFFECT": "",
+  "ICONIC/PREVIEW/DEATH_EFFECT": "",
+  "ICONIC/PREVIEW/EXTRA": "",
+  "ICONIC/PREVIEW/GHOST_TRAIL": "",
+  "ICONIC/PREVIEW/GLOW": "",
+  "ICONIC/PREVIEW/ICONS": "",
+  "ICONIC/PREVIEW/SHIP_FIRE": "",
+  "ICONIC/PREVIEW/TRAIL": "",
+  "ICONIC/PREVIEW/TRAIL_COL": "",
+  "ICONIC/PREVIEW/WAVE_TRAIL": "",
+  "ICONIC/SPECIAL/SPEED/PRE": "",
+  "ICONIC/SPECIAL/SPEED/SUF": "",
+  "ICONIC/SPECIAL/PREVIEW": "",
+  "ICONIC/SPECIAL/INVERTED": "",
   "GM_VAR/0060": "기본 미니 아이콘",
   "GM_VAR/0061": "거미 대시 전환",
   "GM_VAR/0062": "대시 불꽃 전환",
