--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -34,30 +34,30 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Makroa arrakastaz bihurtuta! Zure beste makroekin aurkitu ahal duzu",
   "MESSAGE/REPLAY/SAVE": "Zure macro-an aldaketak gorde nahi duzu?",
   "MESSAGE/KEYBINDS/EMPTY": "Mesedez, lehenik lasterbide bat sar ezazu",
-  "ICONIC/DISABLE": "",
-  "ICONIC/EFFECTS": "",
-  "ICONIC/GENERAL": "",
-  "ICONIC/GLOW": "",
-  "ICONIC/OVERRIDE": "",
-  "ICONIC/VANILLA_PROGRESS_BAR": "",
-  "ICONIC/WAVE": "",
-  "ICONIC/PREVIEW/BASE_PARTICLES": "",
-  "ICONIC/PREVIEW/COL1": "",
-  "ICONIC/PREVIEW/COL2": "",
-  "ICONIC/PREVIEW/DASH_EFFECT": "",
-  "ICONIC/PREVIEW/DEATH_EFFECT": "",
-  "ICONIC/PREVIEW/EXTRA": "",
-  "ICONIC/PREVIEW/GHOST_TRAIL": "",
-  "ICONIC/PREVIEW/GLOW": "",
-  "ICONIC/PREVIEW/ICONS": "",
-  "ICONIC/PREVIEW/SHIP_FIRE": "",
-  "ICONIC/PREVIEW/TRAIL": "",
-  "ICONIC/PREVIEW/TRAIL_COL": "",
-  "ICONIC/PREVIEW/WAVE_TRAIL": "",
-  "ICONIC/SPECIAL/SPEED/PRE": "",
-  "ICONIC/SPECIAL/SPEED/SUF": "",
-  "ICONIC/SPECIAL/PREVIEW": "",
-  "ICONIC/SPECIAL/INVERTED": "",
+  "ICONIC/DISABLE": "Itzali",
+  "ICONIC/EFFECTS": "Efektuak",
+  "ICONIC/GENERAL": "Orokorra",
+  "ICONIC/GLOW": "Distira",
+  "ICONIC/OVERRIDE": "Indargabetu",
+  "ICONIC/VANILLA_PROGRESS_BAR": "Jatorrizko Aurrerapen-Barra",
+  "ICONIC/WAVE": "Wave",
+  "ICONIC/PREVIEW/BASE_PARTICLES": "Oinarria",
+  "ICONIC/PREVIEW/COL1": "1 Kolorea",
+  "ICONIC/PREVIEW/COL2": "2 Kolorea",
+  "ICONIC/PREVIEW/DASH_EFFECT": "Dash Efektua",
+  "ICONIC/PREVIEW/DEATH_EFFECT": "Hiltze-Efektua",
+  "ICONIC/PREVIEW/EXTRA": "Gehigarria",
+  "ICONIC/PREVIEW/GHOST_TRAIL": "Mamu-Aztarna",
+  "ICONIC/PREVIEW/GLOW": "Distira",
+  "ICONIC/PREVIEW/ICONS": "Ikonoak",
+  "ICONIC/PREVIEW/SHIP_FIRE": "Ship Sua",
+  "ICONIC/PREVIEW/TRAIL": "Aztarna",
+  "ICONIC/PREVIEW/TRAIL_COL": "Aztarnaren Kolorea",
+  "ICONIC/PREVIEW/WAVE_TRAIL": "Wave Aztarna",
+  "ICONIC/SPECIAL/SPEED/PRE": "Abiadura",
+  "ICONIC/SPECIAL/SPEED/SUF": "x",
+  "ICONIC/SPECIAL/PREVIEW": "Aurrebista",
+  "ICONIC/SPECIAL/INVERTED": "Alderantziz",
   "GM_VAR/0060": "Defektuzko Ikono Txikia",
   "GM_VAR/0061": "Aldatu Spider-aren Dash",
   "GM_VAR/0062": "Aldatu Dash Sua",
@@ -121,7 +121,7 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "Hiru Dezimal",
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "Lau Dezimal",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Ball Biraketaren Bug-a",
-  "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "2.0 bertsioaren 'Ball Barrel-Roll' errorea birsortzen du",
+  "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "2.0 bertsioaren «Ball Barrel-Roll» errorea birsortzen du",
   "COSMETIC/HACK_NO_CIRCLES": "Borobil Efekturik Ez",
   "COSMETIC/HACK_NO_CIRCLES/TIP": "Tranpolinen, orbeen eta ateen borobil-efektua kentzen ditu",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Partikula Klasikoak",
