--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -34,30 +34,30 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "¡Macro convertido correctamente! Encuéntralo junto a tus otros macros",
   "MESSAGE/REPLAY/SAVE": "¿Quieres guardar los cambios realizados en la macro?",
   "MESSAGE/KEYBINDS/EMPTY": "Por favor, tienes que establecer primero un atajo de teclado",
-  "ICONIC/DISABLE": "",
-  "ICONIC/EFFECTS": "",
-  "ICONIC/GENERAL": "",
-  "ICONIC/GLOW": "",
-  "ICONIC/OVERRIDE": "",
-  "ICONIC/VANILLA_PROGRESS_BAR": "",
-  "ICONIC/WAVE": "",
-  "ICONIC/PREVIEW/BASE_PARTICLES": "",
-  "ICONIC/PREVIEW/COL1": "",
-  "ICONIC/PREVIEW/COL2": "",
-  "ICONIC/PREVIEW/DASH_EFFECT": "",
-  "ICONIC/PREVIEW/DEATH_EFFECT": "",
-  "ICONIC/PREVIEW/EXTRA": "",
-  "ICONIC/PREVIEW/GHOST_TRAIL": "",
-  "ICONIC/PREVIEW/GLOW": "",
-  "ICONIC/PREVIEW/ICONS": "",
-  "ICONIC/PREVIEW/SHIP_FIRE": "",
-  "ICONIC/PREVIEW/TRAIL": "",
-  "ICONIC/PREVIEW/TRAIL_COL": "",
-  "ICONIC/PREVIEW/WAVE_TRAIL": "",
-  "ICONIC/SPECIAL/SPEED/PRE": "",
-  "ICONIC/SPECIAL/SPEED/SUF": "",
-  "ICONIC/SPECIAL/PREVIEW": "",
-  "ICONIC/SPECIAL/INVERTED": "",
+  "ICONIC/DISABLE": "Desactivar",
+  "ICONIC/EFFECTS": "Efectos",
+  "ICONIC/GENERAL": "General",
+  "ICONIC/GLOW": "Glow",
+  "ICONIC/OVERRIDE": "Sobreescribir",
+  "ICONIC/VANILLA_PROGRESS_BAR": "Barra de progreso vanilla",
+  "ICONIC/WAVE": "Wave",
+  "ICONIC/PREVIEW/BASE_PARTICLES": "Base",
+  "ICONIC/PREVIEW/COL1": "Color 1",
+  "ICONIC/PREVIEW/COL2": "Color 2",
+  "ICONIC/PREVIEW/DASH_EFFECT": "Efecto Dash",
+  "ICONIC/PREVIEW/DEATH_EFFECT": "Efecto de muerte",
+  "ICONIC/PREVIEW/EXTRA": "Extra",
+  "ICONIC/PREVIEW/GHOST_TRAIL": "Estela fantasma",
+  "ICONIC/PREVIEW/GLOW": "Glow",
+  "ICONIC/PREVIEW/ICONS": "Iconos",
+  "ICONIC/PREVIEW/SHIP_FIRE": "Fuego de la nave",
+  "ICONIC/PREVIEW/TRAIL": "Estela",
+  "ICONIC/PREVIEW/TRAIL_COL": "Color de la estela",
+  "ICONIC/PREVIEW/WAVE_TRAIL": "Estela del wave",
+  "ICONIC/SPECIAL/SPEED/PRE": "Velocidad",
+  "ICONIC/SPECIAL/SPEED/SUF": "x",
+  "ICONIC/SPECIAL/PREVIEW": "Vista previa",
+  "ICONIC/SPECIAL/INVERTED": "Invertido",
   "GM_VAR/0060": "Mini-icono por defecto",
   "GM_VAR/0061": "Cambiar dash de araña",
   "GM_VAR/0062": "Cambiar fuego de dash",
